# facesort

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: build-release.yml
docs/: SPEC.md
facesort/: __init__.py  cli.py  report.py
facesort/core/: cache.py  cluster.py  engine.py  imageio.py  matcher.py  models.py  organizer.py  pipeline.py  templates.py
facesort/gui/: __init__.py  api.py  app.py  library.py  thumbs.py
packaging/: FaceSort.icns  FaceSort.spec  build_app.sh  launcher.py  make_dmg.sh
scripts/: inline_webui.py  make_icon.py  smoke_test.py  smoke_test.sh
tests/: conftest.py  test_cache.py  test_cluster.py  test_matcher.py  test_organizer.py  test_pipeline_scan.py  test_raw_pairing.py  test_templates.py
webui/: index.html  package-lock.json  package.json  vite.config.js
webui/src/: App.jsx  api.js  index.css  ui.jsx
webui/src/steps/: ConfigStep.jsx  PreviewStep.jsx  RunStep.jsx  SamplesStep.jsx  StepShell.jsx
