[project]
name = "facesort"
version = "0.1.0"
description = "FaceSort - organize photos into per-person folders using face recognition against sample photos"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "insightface>=0.7.3",
    "onnxruntime>=1.17",
    "numpy>=1.26",
    "pillow>=10.0",
    "pillow-heif>=0.15",
    "typer>=0.12",
    "opencv-python-headless>=4.8",
    "pywebview>=6.2.1",
    "rawpy>=0.27.0",
]

[project.scripts]
facesort = "facesort.cli:app"

[dependency-groups]
dev = [
    "pyinstaller>=6.21.0",
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["facesort"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
